[package]
name = "timelens"
version = "0.1.0"
authors = ["Sebastian Morr <sebastian@morr.cc>"]
repository = "https://github.com/timelens/timelens"
homepage = "https://timelens.io"
license = "GPL-2.0-or-later"
readme = "README.md"
documentation = "https://timelens.io"
description = "Creates visual timelines from video files"

[dependencies]
gstreamer = "0.11.3"
gstreamer-app = "0.11.2"
ansi_term = "0.11.0"
colored = "1.6.0"

[dependencies.clap]
version = "2.31.2"
features = ["wrap_help"]

[dev-dependencies]
assert_cmd = "0.3.0"
predicates = "0.5.1"
assert_fs = "0.3.0"
