[package]
name = "timelens"
version = "0.1.0"
authors = ["Sebastian Morr <sebastian@morr.cc>"]
repository = "https://github.com/timelens/timelens"
homepage = "https://timelens.io"
license = "GPL-2.0-or-later"
readme = "README.md"
documentation = "https://timelens.io"
description = """
Timelens creates visual timelines from video files, which visualize
the videos' color development and can be integrated into video players.
That way, users can navigate videos more precisely and actively.

Additionally, Timelens can create thumbnail grids, which can be used
to display preview images when the user hovers over the visual timeline.
Timelens can output a VTT file, which references the thumbnails' positions.
"""

[dependencies]
gstreamer = "0.11.3"
gstreamer-app = "0.11.2"
colored = "1.6.0"

[dependencies.clap]
version = "2.31.2"
features = ["wrap_help"]

[dev-dependencies]
assert_cmd = "0.3.0"
predicates = "0.5.1"
assert_fs = "0.3.0"
